# cryptocurrency-tracker

./: .flake8  .gitignore  LICENSE.txt  README.md  alerts_sample.json  app.py  coinmarketcap.py  config_default.json  insert_data.py  load_historical.py  pyproject.toml  sqlite.py
.github/workflows/: release.yaml  test.yaml
examples/: config.py  db.py  main.py  schemas.py  sync.py
src/cryptomonere/: SqlHandler.py  alerts.py  alerts_json.py  alerts_sample.json  api_keys_sample.json  app.py  coinmarketcap.py  config.py  config_default.json  graph.py  insert_data.py  load_historical.py  report.py  sqlite.py
src/cryptomonere/sql/: dedupe_currency_map.sql  quote_latest_last_at_report.sql  quote_latest_report.sql  quote_to_quote_latest.sql  recreate_cryptocurrency_map.sql  table_alert_variability_rule.sql  test.sql  variability_alerts.sql
