[build-system]
requires = ["flit_core==3.12.0"]
build-backend = "flit_core.buildapi"

[project]
name = "cryptomonere"
version = '0.0.4'
dependencies = [
    "pydantic",
    "requests",
]
authors = [
	{name="Michael van Dyk",email="mvandyk@protonmail.com"}
]
requires-python = ">=3.12"
description = "Terminal based cryptocurrency tracker with alerts and reporting systems"
license = { file = "LICENSE.txt" }

[project.scripts]
monere = "cryptomonere.app:run"

[project.optional-dependencies]
    dev = ["black",
    "build",
    "flake8",
    "isort",
    "pre-commit",
    "twine",
    ]
    graph = ["matplotlib",
    "polars"
    ]
[tool.black]
line-length = 160
target-version = ['py312']

[tool.isort]
append_only = true
line_length = 160
combine_as_imports = true
skip = ["build", ".tox", "venv"]
skip_glob = ["*.pya"]
profile = "black"
